Fix file encoding, Fix issues with typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"declaration": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"target": "es5"
+		"target": "es5",
+		"outDir": "dist"
 	},
 	"exclude": [
 		"node_modules",
