Update version to 0.1.10, Update package.json formatting, Change bluebird version in package.json to *

--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-	"name": "ag-sockets",
-	"version": "0.1.9",
-	"description": "Library for communication via WebSockets",
-	"main": "dist/index.js",
-	"browser": "dist/browser.js",
-	"typings": "dist/index.d.ts",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Agamnentzar/ag-sockets"
-	},
-	"scripts": {
-		"test": "gulp test"
-	},
-	"author": "Agamnentzar",
-	"license": "MIT",
-	"keywords": [
-		"websocket"
-	],
-	"devDependencies": {
-		"chai": "^3.5.0",
-		"chai-as-promised": "^5.3.0",
-		"del": "^2.2.0",
-		"gulp": "^3.9.1",
-		"gulp-plumber": "^1.1.0",
-		"gulp-spawn-mocha": "^2.2.2",
-		"gulp-tslint": "^4.3.5",
-		"gulp-typescript": "^2.13.0",
-		"merge2": "^1.0.2",
-		"mocha": "^2.4.5",
-		"remap-istanbul": "^0.4.0",
-		"run-sequence": "^1.1.5",
-		"sinon": "^1.17.3",
-		"source-map-support": "^0.4.0",
-		"tslint": "^3.7.1"
-	},
-	"dependencies": {
-		"bluebird": "^3.3.4",
-		"ws": "^1.1.0"
-	}
+  "name": "ag-sockets",
+  "version": "0.1.10",
+  "description": "Library for communication via WebSockets",
+  "main": "dist/index.js",
+  "browser": "dist/browser.js",
+  "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Agamnentzar/ag-sockets"
+  },
+  "scripts": {
+    "test": "gulp test"
+  },
+  "author": "Agamnentzar",
+  "license": "MIT",
+  "keywords": [
+    "websocket"
+  ],
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-spawn-mocha": "^2.2.2",
+    "gulp-tslint": "^4.3.5",
+    "gulp-typescript": "^2.13.0",
+    "merge2": "^1.0.2",
+    "mocha": "^2.4.5",
+    "remap-istanbul": "^0.4.0",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3",
+    "source-map-support": "^0.4.0",
+    "tslint": "^3.7.4"
+  },
+  "dependencies": {
+    "bluebird": "*",
+    "ws": "^1.1.0"
+  }
 }
