--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ node_js:
   - "6"
 notifications:
   email: false
+before_install:
+  - npm install -g typings
+install:
+  - npm install
+  - typings install
