--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "0.1.16",
+  "version": "0.2.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -21,10 +21,12 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "del": "^2.2.1",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.30",
     "gulp-plumber": "^1.1.0",
     "gulp-spawn-mocha": "^2.2.2",
-    "gulp-tslint": "^4.3.5",
+    "gulp-tslint": "^6.0.1",
     "gulp-typescript": "^2.13.6",
     "merge2": "^1.0.2",
     "mocha": "^2.4.5",
@@ -32,10 +34,13 @@
     "run-sequence": "^1.2.2",
     "sinon": "^1.17.3",
     "source-map-support": "^0.4.1",
-    "tslint": "^3.13.0"
+    "systemjs-builder": "^0.15.23",
+    "tslint": "^3.13.0",
+    "typescript": "^2.0.0"
   },
   "dependencies": {
     "bluebird": "*",
+    "lodash": "^4.13.1",
     "ws": "*"
   }
 }
