--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -17,6 +17,9 @@
   "keywords": [
     "websocket"
   ],
+  "peerDependencies": {
+    "ws": "*"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
@@ -27,20 +30,20 @@
     "gulp-plumber": "^1.1.0",
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^6.1.1",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "^2.14.0",
+    "istanbul": "^0.4.5",
     "merge2": "^1.0.2",
     "mocha": "^3.0.2",
     "remap-istanbul": "^0.4.0",
     "run-sequence": "^1.2.2",
-    "sinon": "^1.17.5",
+    "sinon": "^1.17.6",
     "source-map-support": "^0.4.2",
-    "systemjs-builder": "^0.15.30",
+    "systemjs-builder": "^0.15.31",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.0"
+    "typescript": "^1.8.10"
   },
   "dependencies": {
     "bluebird": "*",
-    "lodash": "^4.15.0",
-    "ws": "*"
+    "lodash": "*"
   }
 }
