--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ notifications:
   email: false
 before_install:
   - npm install -g typings
+  - npm install ws
 install:
   - npm install
   - typings install
