--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -21,26 +21,35 @@
     "ws": "*"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.0.33",
+    "@types/chai": "^3.4.34",
+    "@types/chai-as-promised": "0.0.29",
+    "@types/express": "^4.0.33",
+    "@types/lodash": "^4.14.36",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.41",
+    "@types/sinon": "^1.16.31",
+    "@types/ws": "0.0.33",
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai-as-promised": "^6.0.0",
     "del": "^2.2.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.30",
     "gulp-plumber": "^1.1.0",
     "gulp-spawn-mocha": "^3.1.0",
-    "gulp-tslint": "^6.1.1",
-    "gulp-typescript": "^2.14.0",
+    "gulp-tslint": "^6.1.2",
+    "gulp-typescript": "^3.0.1",
     "istanbul": "^0.4.5",
     "merge2": "^1.0.2",
-    "mocha": "^3.0.2",
-    "remap-istanbul": "^0.4.0",
+    "mocha": "^3.1.0",
+    "remap-istanbul": "^0.6.4",
     "run-sequence": "^1.2.2",
     "sinon": "^1.17.6",
     "source-map-support": "^0.4.2",
-    "systemjs-builder": "^0.15.31",
+    "systemjs-builder": "^0.15.32",
     "tslint": "^3.15.1",
-    "typescript": "^1.8.10"
+    "typescript": "^2.0.3"
   },
   "dependencies": {
     "bluebird": "*",
