--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -22,12 +22,11 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.33",
-    "@types/chai": "^3.4.34",
-    "@types/chai-as-promised": "0.0.29",
     "@types/express": "^4.0.33",
     "@types/lodash": "^4.14.36",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.41",
+    "@types/promises-a-plus": "0.0.27",
     "@types/sinon": "^1.16.31",
     "@types/ws": "0.0.33",
     "chai": "^3.5.0",
