--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "0.8.1",
+  "version": "0.8.8",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -11,8 +11,16 @@
   },
 	"scripts": {
 		"test": "gulp test",
+		"build": "gulp build",
 		"prepublish": "gulp build"
 	},
+  "jspm": {
+    "jspmNodeConversion": false,
+    "dependencies": {
+      "bluebird": "^3.4.7",
+      "lodash": "^4.17.4"
+    }
+  },
   "author": "Agamnentzar",
   "license": "MIT",
   "keywords": [
@@ -22,13 +30,13 @@
     "ws": "*"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.0.36",
+    "@types/bluebird": "^3.0.37",
     "@types/express": "^4.0.34",
-    "@types/lodash": "^4.14.44",
-    "@types/mocha": "^2.2.35",
-    "@types/node": "^6.0.54",
+    "@types/lodash": "^4.14.50",
+    "@types/mocha": "^2.2.37",
+    "@types/node": "^6.0.60",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^1.16.33",
+    "@types/sinon": "^1.16.34",
     "@types/ws": "0.0.37",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -39,17 +47,17 @@
     "gulp-plumber": "^1.1.0",
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^7.0.1",
-    "gulp-typescript": "^3.1.3",
+    "gulp-typescript": "^3.1.4",
     "istanbul": "^0.4.5",
-    "merge2": "^1.0.2",
+    "merge2": "^1.0.3",
     "mocha": "^3.2.0",
     "remap-istanbul": "^0.8.4",
     "run-sequence": "^1.2.2",
-    "sinon": "^1.17.6",
+    "sinon": "^1.17.7",
     "source-map-support": "^0.4.8",
     "systemjs-builder": "^0.15.34",
-    "tslint": "^4.2.0",
-    "typescript": "^2.1.4"
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.5"
   },
   "dependencies": {
     "bluebird": "*",
