--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "0.8.8",
+  "version": "0.8.9",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -9,12 +9,13 @@
     "type": "git",
     "url": "https://github.com/Agamnentzar/ag-sockets"
   },
-	"scripts": {
-		"test": "gulp test",
-		"build": "gulp build",
-		"prepublish": "gulp build"
-	},
+  "scripts": {
+    "test": "gulp test",
+    "build": "gulp build",
+    "prepublish": "gulp build"
+  },
   "jspm": {
+    "main": "dist/browser.js",
     "jspmNodeConversion": false,
     "dependencies": {
       "bluebird": "^3.4.7",
@@ -31,12 +32,13 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.37",
-    "@types/express": "^4.0.34",
+    "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.50",
-    "@types/mocha": "^2.2.37",
-    "@types/node": "^6.0.60",
+    "@types/mocha": "^2.2.38",
+    "@types/node": "^7.0.1",
     "@types/promises-a-plus": "0.0.27",
     "@types/sinon": "^1.16.34",
+    "@types/uws": "0.0.0",
     "@types/ws": "0.0.37",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -54,10 +56,11 @@
     "remap-istanbul": "^0.8.4",
     "run-sequence": "^1.2.2",
     "sinon": "^1.17.7",
-    "source-map-support": "^0.4.8",
+    "source-map-support": "^0.4.10",
     "systemjs-builder": "^0.15.34",
     "tslint": "^4.3.1",
-    "typescript": "^2.1.5"
+    "typescript": "^2.1.5",
+    "uws": "^0.12.0"
   },
   "dependencies": {
     "bluebird": "*",
