Double server-side rate limit to compensate for network delays, Fix linting issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
 		"lib": ["dom", "es6"],
 		"noImplicitAny": true,
 		"noImplicitThis": true,
+		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
+		"alwaysStrict": true,
 		"strictNullChecks": true,
 		"declaration": true,
 		"experimentalDecorators": true,
