--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -37,9 +37,9 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^1.16.35",
-    "@types/uws": "0.0.0",
-    "@types/ws": "0.0.38",
+    "@types/sinon": "^2.1.2",
+    "@types/uws": "^0.13.0",
+    "@types/ws": "0.0.39",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "del": "^2.2.2",
@@ -55,12 +55,13 @@
     "mocha": "^3.2.0",
     "remap-istanbul": "^0.9.1",
     "run-sequence": "^1.2.2",
-    "sinon": "^1.17.7",
+    "sinon": "^2.1.0",
     "source-map-support": "^0.4.11",
     "systemjs-builder": "^0.16.3",
-    "tslint": "^4.5.1",
+    "tslint": "^5.0.0",
     "typescript": "^2.2.1",
-    "uws": "^0.13.0"
+    "ws": "*",
+    "uws": "*"
   },
   "dependencies": {
     "bluebird": "*",
