--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"alwaysStrict": true,
-		"strictNullChecks": true,
+		"strict": true,
 		"declaration": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
