Update packages, Add binary encoding for arbitrary objects

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.6.2",
+  "version": "1.7.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -30,38 +30,36 @@
     "ws": "*"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.12",
+    "@types/bluebird": "^3.5.16",
     "@types/express": "^4.0.37",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^8.0.31",
+    "@types/node": "^8.0.34",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^2.3.5",
+    "@types/sinon": "^2.3.6",
     "@types/uws": "^0.13.0",
-    "@types/ws": "^3.0.2",
+    "@types/ws": "^3.2.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "bluebird": "^3.5.1",
     "del": "^3.0.0",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
     "gulp-plumber": "^1.1.0",
-    "gulp-spawn-mocha": "^3.3.1",
+    "gulp-spawn-mocha": "^4.0.1",
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.2",
     "istanbul": "^0.4.5",
     "merge2": "^1.2.0",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.1",
     "remap-istanbul": "^0.9.1",
     "run-sequence": "^2.2.0",
-    "sinon": "^4.0.0",
-    "source-map-support": "^0.4.18",
+    "sinon": "^4.0.1",
+    "source-map-support": "^0.5.0",
     "systemjs-builder": "^0.16.11",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "uws": "^8.14.1",
     "ws": "^3.2.0"
-  },
-  "dependencies": {
-    "bluebird": "*"
   }
 }
