--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -12,14 +12,13 @@
   "scripts": {
     "test": "gulp test",
     "build": "gulp build",
-    "prepublishOnly": "gulp build"
+    "dev": "gulp dev",
+    "lint": "tslint -c tslint.json src/ts/**/*.ts",
+    "prepublishOnly": "npm run build"
   },
   "jspm": {
     "main": "dist/browser.js",
-    "jspmNodeConversion": false,
-    "dependencies": {
-      "bluebird": "^3.4.7"
-    }
+    "jspmNodeConversion": false
   },
   "author": "Agamnentzar",
   "license": "MIT",
@@ -30,36 +29,33 @@
     "ws": "*"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.16",
-    "@types/express": "^4.0.37",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^8.0.34",
+    "@types/express": "^4.11.0",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^8.5.9",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^2.3.6",
-    "@types/uws": "^0.13.0",
-    "@types/ws": "^3.2.0",
+    "@types/sinon": "^4.1.3",
+    "@types/uws": "^0.13.1",
+    "@types/ws": "^4.0.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "bluebird": "^3.5.1",
     "del": "^3.0.0",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
-    "gulp-plumber": "^1.1.0",
-    "gulp-spawn-mocha": "^4.0.1",
-    "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^3.2.2",
+    "gulp-plumber": "^1.2.0",
+    "gulp-spawn-mocha": "^5.0.0",
+    "gulp-typescript": "^3.2.4",
     "istanbul": "^0.4.5",
-    "merge2": "^1.2.0",
-    "mocha": "^4.0.1",
-    "remap-istanbul": "^0.9.1",
-    "run-sequence": "^2.2.0",
-    "sinon": "^4.0.1",
-    "source-map-support": "^0.5.0",
-    "systemjs-builder": "^0.16.11",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.3",
-    "uws": "^8.14.1",
-    "ws": "^3.2.0"
+    "merge2": "^1.2.1",
+    "mocha": "^5.0.0",
+    "remap-istanbul": "^0.10.1",
+    "run-sequence": "^2.2.1",
+    "sinon": "^4.2.2",
+    "source-map-support": "^0.5.3",
+    "systemjs-builder": "^0.16.12",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.1",
+    "uws": "^9.14.0",
+    "ws": "^4.0.0"
   }
 }
