--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -18,7 +18,10 @@
   },
   "jspm": {
     "main": "dist/browser.js",
-    "jspmNodeConversion": false
+    "jspmNodeConversion": false,
+    "dependencies": {
+      "bluebird": "*"
+    }
   },
   "author": "Agamnentzar",
   "license": "MIT",
@@ -29,7 +32,7 @@
     "ws": "*"
   },
   "devDependencies": {
-    "@types/express": "^4.11.0",
+    "@types/express": "^4.11.1",
     "@types/mocha": "^2.2.48",
     "@types/node": "^8.5.9",
     "@types/promises-a-plus": "0.0.27",
@@ -57,5 +60,9 @@
     "typescript": "^2.7.1",
     "uws": "^9.14.0",
     "ws": "^4.0.0"
+  },
+  "dependencies": {
+    "@types/bluebird": "*",
+    "bluebird": "*"
   }
 }
