--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.18.0",
+  "version": "1.19.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -19,9 +19,7 @@
   "jspm": {
     "main": "dist/browser.js",
     "jspmNodeConversion": false,
-    "dependencies": {
-      "bluebird": "*"
-    }
+    "dependencies": {}
   },
   "author": "Agamnentzar",
   "license": "MIT",
@@ -33,37 +31,32 @@
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
-    "@types/mocha": "^5.0.0",
-    "@types/node": "^9.6.2",
+    "@types/mocha": "^5.2.0",
+    "@types/node": "^10.1.2",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^4.3.1",
+    "@types/sinon": "^4.3.3",
     "@types/uws": "^0.13.2",
-    "@types/ws": "^4.0.2",
+    "@types/ws": "^5.1.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "del": "^3.0.0",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
-    "gulp-plumber": "^1.2.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-spawn-mocha": "^5.0.1",
     "gulp-typescript": "^4.0.2",
     "istanbul": "^0.4.5",
-    "merge2": "^1.2.1",
-    "mocha": "^5.0.5",
-    "remap-istanbul": "^0.11.0",
+    "merge2": "^1.2.2",
+    "mocha": "^5.2.0",
+    "remap-istanbul": "^0.11.1",
     "run-sequence": "^2.2.1",
-    "sinon": "^4.5.0",
-    "source-map-support": "^0.5.4",
-    "systemjs-builder": "^0.16.12",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1",
-    "uws": "^9.14.0",
+    "sinon": "^5.0.7",
+    "source-map-support": "^0.5.6",
+    "systemjs-builder": "^0.16.13",
+    "tslint": "^5.10.0",
+    "typescript": "^2.8.3",
+    "uws": "^10.148.0",
     "ws": "^5.1.1"
-  },
-  "dependencies": {
-    "@types/bluebird": "*",
-    "bluebird": "*"
   }
 }
