--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.19.2",
+  "version": "1.19.3",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -30,13 +30,13 @@
     "ws": "*"
   },
   "devDependencies": {
-    "@types/express": "^4.11.1",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^10.3.0",
+    "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.5.7",
     "@types/promises-a-plus": "0.0.27",
     "@types/sinon": "^4.3.3",
     "@types/uws": "^0.13.2",
-    "@types/ws": "^5.1.1",
+    "@types/ws": "^5.1.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "del": "^3.0.0",
@@ -51,12 +51,12 @@
     "mocha": "^5.2.0",
     "remap-istanbul": "^0.11.1",
     "run-sequence": "^2.2.1",
-    "sinon": "^5.0.10",
+    "sinon": "^5.1.1",
     "source-map-support": "^0.5.6",
     "systemjs-builder": "^0.16.13",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.1",
-    "uws": "^10.148.0",
-    "ws": "^5.2.0"
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
+    "uws": "10.148.1",
+    "ws": "^6.0.0"
   }
 }
