--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "1.21.1",
+  "version": "2.0.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -13,7 +13,7 @@
     "test": "gulp test",
     "build": "gulp build",
     "dev": "gulp dev",
-    "lint": "tslint -c tslint.json src/ts/**/*.ts",
+    "lint": "tslint -c tslint.json src/**/*.ts",
     "prepublishOnly": "npm run build"
   },
   "jspm": {
@@ -32,31 +32,32 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.9.4",
+    "@types/node": "^10.12.0",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^5.0.2",
+    "@types/sinon": "^5.0.5",
     "@types/uws": "^0.13.2",
     "@types/ws": "^6.0.1",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "clusterws-uws": "^0.4.6",
     "del": "^3.0.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "gulp": "^3.9.1",
     "gulp-live-server": "0.0.31",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-spawn-mocha": "^5.0.1",
     "gulp-typescript": "^4.0.2",
     "istanbul": "^0.4.5",
-    "merge2": "^1.2.2",
+    "merge2": "^1.2.3",
     "mocha": "^5.2.0",
     "remap-istanbul": "^0.12.0",
     "run-sequence": "^2.2.1",
-    "sinon": "^6.3.3",
+    "sinon": "^7.1.0",
     "source-map-support": "^0.5.9",
     "systemjs-builder": "^0.16.13",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.3",
     "uws": "10.148.1",
-    "ws": "^6.0.0"
+    "ws": "^6.1.0"
   }
 }
