--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "4.5.0",
+  "version": "4.5.1",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -33,6 +33,7 @@
     "@types/ws": "^6.0.1"
   },
   "devDependencies": {
+    "@clusterws/cws": "^0.14.0",
     "@types/express": "^4.16.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.10",
@@ -40,7 +41,6 @@
     "@types/sinon": "^7.0.11",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "clusterws-uws": "^0.4.6",
     "del": "^4.1.1",
     "express": "^4.16.4",
     "gulp": "^4.0.2",
