--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "4.6.0",
+  "version": "5.0.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -30,33 +30,33 @@
     "ws": "*"
   },
   "dependencies": {
-    "@types/ws": "^6.0.1"
+    "@types/ws": "^7.2.1"
   },
   "devDependencies": {
-    "@clusterws/cws": "^0.14.0",
-    "@types/express": "^4.16.1",
+    "@clusterws/cws": "^1.1.2",
+    "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.4",
+    "@types/node": "^13.7.1",
     "@types/promises-a-plus": "0.0.27",
-    "@types/sinon": "^7.0.12",
+    "@types/sinon": "^7.5.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "del": "^4.1.1",
+    "del": "^5.1.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-live-server": "0.0.31",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-spawn-mocha": "^5.0.1",
-    "gulp-typescript": "^5.0.1",
+    "gulp-spawn-mocha": "^6.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "istanbul": "^0.4.5",
-    "merge2": "^1.2.3",
-    "mocha": "^6.1.4",
+    "merge2": "^1.3.0",
+    "mocha": "^7.0.1",
     "remap-istanbul": "^0.13.0",
-    "sinon": "^7.3.2",
-    "source-map-support": "^0.5.12",
+    "sinon": "^8.1.1",
+    "source-map-support": "^0.5.16",
     "systemjs-builder": "^0.16.15",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1",
-    "ws": "^7.0.0"
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5",
+    "ws": "^7.2.1"
   }
 }
