Update modules, Improve object compression for binary protocol

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 /resources
 /coverage
 /coverage-remapped
-/typings/index.d.ts
-/typings/globals
-/typings/modules
 /.vs
 /.vscode
-*.sln
+/.nyc_output
