--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ag-sockets",
-  "version": "5.3.1",
+  "version": "5.4.0",
   "description": "Library for communication via WebSockets",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
@@ -13,6 +13,9 @@
     "test": "gulp test",
     "build": "gulp build",
     "dev": "gulp dev",
+    "_ts": "tsc",
+    "_tests": "mocha dist/test/**/*.spec.js --reporter dot --exit",
+    "_coverage": "nyc --silent npm run tests && nyc report --reporter=html",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "prepublishOnly": "npm run build"
   },
@@ -33,7 +36,7 @@
     "@types/ws": "^7.2.2"
   },
   "devDependencies": {
-    "@clusterws/cws": "^1.3.1",
+    "@clusterws/cws": "^1.4.0",
     "@types/express": "^4.17.2",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.7",
@@ -51,6 +54,7 @@
     "istanbul": "^0.4.5",
     "merge2": "^1.3.0",
     "mocha": "^7.1.0",
+    "nyc": "^15.0.0",
     "remap-istanbul": "^0.13.0",
     "sinon": "^9.0.0",
     "source-map-support": "^0.5.16",
