--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"declaration": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
+		"useUnknownInCatchVariables": false,
 		"outDir": "dist"
 	},
 	"exclude": [
