--- a/package.json
+++ b/package.json
@@ -32,36 +32,35 @@
   "peerDependencies": {
     "ws": "*"
   },
-  "dependencies": {
-    "@types/ws": "^7.2.7"
-  },
   "devDependencies": {
     "@clusterws/cws": "^3.0.0",
-    "@encharm/cws": "^4.1.0",
-    "@types/express": "^4.17.12",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^14.17.4",
+    "@encharm/cws": "^4.3.0",
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.0",
     "@types/promises-a-plus": "0.0.27",
     "@types/sinon": "^9.0.11",
-    "chai": "^4.2.0",
+    "@types/ws": "^8.5.3",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "del": "^6.0.0",
-    "express": "^4.17.1",
+    "del": "^6.1.1",
+    "express": "^4.18.1",
     "gulp": "^4.0.2",
     "gulp-live-server": "0.0.31",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-spawn-mocha": "^6.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "istanbul": "^0.4.5",
     "merge2": "^1.4.1",
-    "mocha": "^8.2.0",
+    "mocha": "^6.2.0",
     "nyc": "^15.1.0",
     "remap-istanbul": "^0.13.0",
-    "sinon": "^9.1.0",
-    "source-map-support": "^0.5.19",
+    "sinon": "^14.0.0",
+    "source-map": "0.8.0-beta.0",
+    "source-map-support": "^0.5.21",
     "systemjs-builder": "^0.16.15",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
-    "ws": "^7.3.1"
+    "typescript": "^4.7.4",
+    "ws": "^7.5.8"
   }
 }
