--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "url": "https://github.com/Agamnentzar/ag-sockets"
   },
   "scripts": {
-    "test": "gulp test",
-    "build": "gulp build",
+    "ts": "npm run clean && tsc --watch --project tsconfig.json",
+    "test": "mocha --watch --timeout 10000 -R dot dist/test",
+    "build": "npm run clean && tsc --project tsconfig.json",
     "dev": "gulp dev",
-    "_ts": "tsc",
-    "_tests": "mocha dist/test/**/*.spec.js --reporter dot --exit",
-    "_coverage": "nyc --silent npm run tests && nyc report --reporter=html",
+    "clean": "node clean.js",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "prepublishOnly": "npm run build"
   },
@@ -43,22 +42,11 @@
     "@types/ws": "^8.5.3",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "del": "^6.1.1",
     "express": "^4.18.1",
-    "gulp": "^4.0.2",
-    "gulp-live-server": "0.0.31",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-spawn-mocha": "^6.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "istanbul": "^0.4.5",
-    "merge2": "^1.4.1",
     "mocha": "^6.2.0",
-    "nyc": "^15.1.0",
-    "remap-istanbul": "^0.13.0",
     "sinon": "^14.0.0",
     "source-map": "0.8.0-beta.0",
     "source-map-support": "^0.5.21",
-    "systemjs-builder": "^0.16.15",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4",
     "ws": "^7.5.8"
